--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-        <dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+			<version>2.3.4.RELEASE</version>
+		</dependency>
+
+		<dependency>
             <groupId>com.github.gobars</groupId>
             <artifactId>id</artifactId>
             <version>0.0.11</version>
