--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,21 @@
 
 
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/sep_db
-spring.datasource.username=postgres
-spring.datasource.password=torquerf1
+#spring.datasource.url=jdbc:postgresql://localhost:5432/sep_db
+#spring.datasource.username=postgres
+#spring.datasource.password=torquerf1
+#
+##drop n create table again, good for testing, comment this in production
+#spring.jpa.hibernate.ddl-auto=create-drop
 
-#drop n create table again, good for testing, comment this in production
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.h2.console.enabled=true
+
+
+
